--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
 
   app:
@@ -11,13 +9,15 @@ services:
     working_dir: /var/www/html
     volumes:
       - .:/var/www/html
+      - ./vendor:/var/www/html/vendor
+      - ./storage:/var/www/html/storage
     environment:
-      - DB_CONNECTION=pgsql
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_DATABASE=car_rent
-      - DB_USERNAME=caruser
-      - DB_PASSWORD=carpass
+      DB_CONNECTION: pgsql
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_DATABASE: car_rent
+      DB_USERNAME: caruser
+      DB_PASSWORD: carpass
     ports:
       - "8000:8000"
     depends_on:
