--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,43 @@
+version: '3.8'
+
 services:
 
+  # ------------------------------------------------------------
+  # Usługa Aplikacji Laravel (app)
+  # ------------------------------------------------------------
   app:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: car_rent_app
-    restart: unless-stopped
+    # Pamiętaj, aby nie używać restart: unless-stopped w środowisku deweloperskim,
+    # aby uniknąć automatycznego restartu po błędach w kodzie.
+    restart: "no"
     working_dir: /var/www/html
     volumes:
-      - .:/var/www/html
-      - ./vendor:/var/www/html/vendor
-      - ./storage:/var/www/html/storage
+      # Mapowanie bieżącego katalogu na /var/www/html (deweloperskie)
+      - .:/var/www/html:delegated
+      # Wolumen dla storage, aby zachować logi, cache itp.
+      - app_storage:/var/www/html/storage
     environment:
+      # Zmienne dla Laravel/PostgreSQL
       DB_CONNECTION: pgsql
       DB_HOST: db
       DB_PORT: 5432
       DB_DATABASE: car_rent
       DB_USERNAME: caruser
       DB_PASSWORD: carpass
+      # Ustawienie portu, na którym Laravel będzie nasłuchiwał
+      APP_PORT: 8000
+    # Port mapujemy na 8000
     ports:
       - "8000:8000"
     depends_on:
       - db
 
+  # ------------------------------------------------------------
+  # Usługa Bazy Danych PostgreSQL (db)
+  # ------------------------------------------------------------
   db:
     image: postgres:15
     container_name: car_rent_db
@@ -31,19 +46,46 @@ services:
       POSTGRES_USER: caruser
       POSTGRES_PASSWORD: carpass
       POSTGRES_DB: car_rent
+    # Opcjonalne mapowanie portu, jeśli chcesz łączyć się z zewnątrz (np. z pgAdmin desktopowym)
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  # ------------------------------------------------------------
+  # Usługa Adminer (Szybki podgląd)
+  # ------------------------------------------------------------
   adminer:
     image: adminer
     container_name: car_rent_adminer
     restart: unless-stopped
     ports:
-      - "8080:8080"
+      - "8080:8080" # http://localhost:8080
     depends_on:
       - db
 
+  # ------------------------------------------------------------
+  # Usługa pgAdmin 4 (Zaawansowane zarządzanie)
+  # ------------------------------------------------------------
+pgadmin:
+  image: dpage/pgadmin4:7.8
+  container_name: car_rent_pgadmin
+  restart: "no"
+  environment:
+    PGADMIN_DEFAULT_EMAIL: user@example.com
+    PGADMIN_DEFAULT_PASSWORD: admin
+  ports:
+    - "5050:80"
+  volumes:
+    - pgadmin_data:/var/lib/pgadmin
+  depends_on:
+    - db
+
+
+# ------------------------------------------------------------
+# Wolumeny do utrwalania danych
+# ------------------------------------------------------------
 volumes:
   pgdata:
+  app_storage: # Nowy wolumen dla storage
+  pgadmin_data:
