--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dependencies": {
         "@tailwindcss/postcss": "^4.1.18",
         "@vitejs/plugin-react": "^5.1.2",
+        "leaflet": "^1.9.4",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
+        "react-leaflet": "^5.0.0",
         "react-router-dom": "^7.11.0"
     }
 }
