--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
         "react-leaflet": "^5.0.0",
-        "react-router-dom": "^7.11.0"
+        "react-router-dom": "^7.11.0",
+        "recharts": "^3.7.0"
     }
 }
